--- a/Mail/MailProject/views/start_page.erb
+++ b/Mail/MailProject/views/start_page.erb
@@ -8,7 +8,7 @@
       <p>Mail</p>
       <input type="text" name="user_mail">
       <p>Password</p>
-      <input type="text" name="user_password">
+      <input type="password" name="user_password">
       <input type="submit" value="Login">
     </form>
   </body>
