Added new tests

--- a/Mail/MailProject/views/user_page.erb
+++ b/Mail/MailProject/views/user_page.erb
@@ -4,8 +4,6 @@
 </head>
 <body>
 <h1><%= user_name %></h1>
-<form method="get" action="/">
-  <form></form>
   <form method="get" action="/<%= user_name %>/letter/all">
     <input type="submit" value="All letter(<%= all_count %>)" name="all_letter">
   </form>
@@ -14,6 +12,13 @@
   </form>
   <form method="get" action="/<%= user_name %>/letter/read">
     <input type="submit" value="Read letter(<%= read_count %>)" name="read_letter">
+  </form>
+<form>
+  <form method="get" action="/reload_page/<%= user_name%>">
+    <input type="submit" value="Reload">
+  </form>
+  <form method="get" action="/">
+    <input type="submit" value="Logout">
   </form>
 </form>
 </body>
